[workspace]
members = [
    "mco-gen",
    "examples"
]

[package]
name = "mco"
version = "0.1.43"
edition = "2018"
authors = ["zhuxiujia@qq.com", "Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/co-rs/mco.git"
homepage = "https://github.com/co-rs/mco.git"
description = "Rust Coroutine Library like go"
readme = "README.md"
keywords = ["coroutine", "async", "multi-thread"]
categories = ["concurrency"]
build = "build.rs"
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
    "benches/**/*",
    "docs/**/*",
]


[dependencies]
log = "0.4"
socket2 = { version = "0.4", features = ["all"] }
num_cpus = "1.1"
smallvec = "1.2"
mco-gen = { version = "0.1", path = "mco-gen" }
crossbeam = "0.8"
crossbeam-utils = { version = "0.8", features = ["std"] }
once_cell = "1.9.0"
parking_lot = "0.11"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing", "serde"] }
serde = "1.0"

tokio = {version="1" , features = ["full"]}


[target.'cfg(unix)'.dependencies]
nix = "0.21"
libc = "0.2"
tempdir = "0.3.7"

[target.'cfg(windows)'.dependencies]
miow = "0.3"
winapi = { version = "0.3", features = ["std", "minwinbase", "minwindef", "timezoneapi"] }

[target."cfg(all(target_arch = \"wasm32\", not(any(target_os = \"emscripten\", target_os = \"wasi\"))))".dependencies.js-sys]
version = "0.3"
optional = true

[target."cfg(all(target_arch = \"wasm32\", not(any(target_os = \"emscripten\", target_os = \"wasi\"))))".dependencies.wasm-bindgen]
version = "0.2"
optional = true

[target."cfg(all(target_arch = \"wasm32\", not(any(target_os = \"emscripten\", target_os = \"wasi\"))))".dev-dependencies.wasm-bindgen-test]
version = "0.3"

[profile.release]
lto = true

[build-dependencies]
rustversion = "1.0"

[dev-dependencies]