[workspace]
members = [
    "examples"
, "mco-gen"]

[package]
name = "mco"
version = "0.1.48"
edition = "2018"
authors = ["zhuxiujia@qq.com", "Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/co-rs/mco.git"
homepage = "https://github.com/co-rs/mco.git"
description = "Rust Coroutine Library like go"
readme = "README.md"
keywords = ["coroutine", "async", "multi-thread"]
categories = ["concurrency"]

exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
    "benches/**/*",
    "docs/**/*",
]

[dependencies]
log = "0.4"
socket2 = { version = "0.5.5", features = ["all"] }
num_cpus = "1.13"
smallvec = "1.9"
mco-gen  = {version = "0.7",path="mco-gen"}
crossbeam = "0.8"
crossbeam-utils = { version = "0.8", features = ["std"] }
once_cell = "1.18"
parking_lot = "0.11"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing", "serde"] }
serde = "1.0"
dark-std = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["event"] }
libc = "0.2"
tempdir = "0.3.7"


[target.'cfg(windows)'.dependencies]
miow = "0.6"
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Time",
]

[target."cfg(all(target_arch = \"wasm32\", not(any(target_os = \"emscripten\", target_os = \"wasi\"))))".dependencies.js-sys]
version = "0.3"
optional = true

[target."cfg(all(target_arch = \"wasm32\", not(any(target_os = \"emscripten\", target_os = \"wasi\"))))".dependencies.wasm-bindgen]
version = "0.2"
optional = true

[target."cfg(all(target_arch = \"wasm32\", not(any(target_os = \"emscripten\", target_os = \"wasi\"))))".dev-dependencies.wasm-bindgen-test]
version = "0.3"

[profile.release]
lto = true

[build-dependencies]
rustversion = "1.0"

[dev-dependencies]
