[package]
name = "mco-gen"
version = "0.1.1"
edition = "2018"
authors = ["zhuxiujia <zhuxiujia@qq.com>","Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/co-rs/mco.git"
homepage = "https://github.com/co-rs/mco.git"
description = "Stackfull Generator Library in Rust"
readme = "README.md"
keywords = ["generator", "coroutine", "green", "thread", "fiber"]
categories = ["data-structures", "algorithms"]
build = "build.rs"
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
    "benches/**/*",
]



[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
log = "0.4"


[build-dependencies]
cc = "1.0"
rustversion = "1.0"

# release build
[profile.release]
lto = true
